--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/AlejandroDojo/MapManager-Backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "mongoose-unique-validator": "^5.0.1",
     "multer": "^1.4.5-lts.1",
